--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@estyle-rzn/plasmajs-ecc",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Elliptic curve cryptography functions",
   "keywords": "ECC, Private Key, Public Key, Signature, AES, Encryption, Decryption",
   "main": "lib/index.js",
@@ -15,7 +15,7 @@
     "coverage": "nyc --reporter=html npm test",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "build": "npm run build_lib && npm run build_browser",
-    "build_lib": "rm -f lib/* && babel src --out-dir lib",
+    "build_lib": "rm -f lib/* && babel src --out-dir lib && browserify lib/index.js -o lib/plasmajs-ecc.js -s plasmajs_ecc",
     "build_browser": "mkdir -p lib && browserify -o dist/plasmajs-ecc.js -s plasmajs_ecc lib/index.js",
     "build_browser_test": "npm run build && browserify -o dist/test.js lib/*.test.js",
     "documentation": "node_modules/documentation/bin/documentation.js",
